[feat] 네비게이션 적용

--- a/category.html
+++ b/category.html
@@ -43,6 +43,18 @@
                 popup.style.display = 'none';
             }
         };
+
+        document.getElementById('studyButton').onclick = function() {
+        // '제주' 버튼에 대한 클릭 이벤트 처리
+        // 예시: 특정 페이지로 이동
+        location.href = 'study.html';
+        };
+
+        document.getElementById('quizButton').onclick = function() {
+        // '제주' 버튼에 대한 클릭 이벤트 처리
+        // 예시: 특정 페이지로 이동
+        location.href = 'quiz.html';
+    };
     </script>
 </body>
 </html>
