[feat] 퀴즈 화면에서 상단 아이콘 추가

--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="styleQuiz.css">
 </head>
 <body>
+    <div class="top-icons">
+        <a href="start.html"><img src="home.png" id="homeButton" alt="메인 페이지로 이동"></a>
+        <a href="point.html"><img src="mandarin.png" id="pointButton" alt="포인트 확인"></a>
+    </div>    
     <div class="quiz-container">
         <div class="question">질문 1: 혼저옵서의 표준어는 무엇인가요?</div>
         <div class="options">
@@ -110,7 +114,6 @@ loadQuiz();
         alert('틀렸습니다. 다시 시도해보세요.');
     }
 }
-
     </script>
 </body>
 </html>
